Fix bug on IE11 Bug of IE11 width flex-basis
In IE11, setting flex-basis (foe example 25%) and adding a padding will
cause the last flex item to wrap.

Change flex-basis to width (width: 25%)

--- a/src/styles/ListView.css
+++ b/src/styles/ListView.css
@@ -62,7 +62,7 @@
     }
     
     .grid__item {
-        flex-basis: 50%;
+        width: 50%;
         margin-bottom: 10px;
         padding: 0 10px;
     }
@@ -73,7 +73,7 @@
 
 @media screen and (min-width: 550px) {
     .grid__item {
-        flex-basis: 33%;
+        width: 33%;
     }
     .grid__item:nth-child(2n) { padding-right: 10px; }
     .grid__item:nth-child(3n) { padding-right: 0; }
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: 759px) {
     .grid__item {
-        flex-basis: 25%;
+        width: 25%;
     }
     .grid__item:nth-child(2n) { padding-right: 10px; }
     .grid__item:nth-child(3n) { padding-right: 10px; }
